--- a/ClientsCRUD.csproj
+++ b/ClientsCRUD.csproj
@@ -7,9 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Razor_page.cshtml.cs" />
+    <Compile Remove="Pages\Shared\Register.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\Razor_page.cshtml" />
+    <Content Remove="Pages\Razor_view.cshtml" />
+    <Content Remove="Pages\Shared\Register.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="MimeKit" Version="4.0.0" />
     <PackageReference Include="OpenAI-DotNet" Version="6.8.7" />
